infra/istio/base/istio-system-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: enabled
  name: istio-system
